force-app/main/default/objects/Spaceship_Name__c/Spaceship_Name__c.object-meta.xml
<CustomObject>
    <description>Spaceship description</description>
    <label>Spaceship</label>
    <nameField>
        <label>Spaceship_Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spaceship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>