force-app/main/default/objects/Spaceship_Name__c/fields/BaseStation__c.field-meta.xml
<CustomField>
    <fullName>BaseStation__c</fullName>
    <description>Spaceship BaseStation description</description>
    <inlineHelpText>Spaceship BaseStation help</inlineHelpText>
    <label>Base Station</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SpaceshipBases</valueSetName>
    </valueSet>
</CustomField>