force-app/main/default/objects/Spaceship_Name__c/fields/Crew_Size__c.field-meta.xml
<CustomField>
    <fullName>Crew_Size__c</fullName>
    <description>Crew Size Description</description>
    <inlineHelpText>Crew Size Help</inlineHelpText>
    <label>Crew Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ShipSize__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SpaceshipCrew</valueSetName>
    </valueSet>
</CustomField>