force-app/main/default/objects/Spaceship_Name__c/fields/FleetType__c.field-meta.xml
<CustomField>
    <fullName>FleetType__c</fullName>
    <description>FleetType Description</description>
    <inlineHelpText>FleetType Help</inlineHelpText>
    <label>Fleet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fleet A</fullName>
                <default>true</default>
                <label>Fleet A</label>
            </value>
            <value>
                <fullName>Fleet B</fullName>
            </value>
            <value>
                <fullName>Fleet C</fullName>
            </value>
            <value>
                <fullName>Fleet D</fullName>
            </value>
            <value>
                <fullName>Fleet E</fullName>
            </value>
            <value>
                <fullName>Fleet F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>