force-app/main/default/objects/Spaceship_Name__c/fields/ShipSize__c.field-meta.xml
<CustomField>
    <fullName>ShipSize__c</fullName>
    <description>ShipSize Description</description>
    <inlineHelpText>ShipSize Help</inlineHelpText>
    <label>Ship Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>