force-app/main/default/objects/Spaceship_Name__c/fields/SpaceshipDestination__c.field-meta.xml
<CustomField>
    <fullName>SpaceshipDestination__c</fullName>
    <description>SpaceshipDestination Description</description>
    <inlineHelpText>SpaceshipDestination Help</inlineHelpText>
    <label>Destination</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>ShipSize__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SpaceshipBases</valueSetName>
    </valueSet>
</CustomField>